# django-iyzico

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_QUALITY_REVIEW.md  CODE_QUALITY_VERIFICATION_REPORT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  MINOR_ENHANCEMENTS_SUMMARY.md  Makefile  PRIVATE_DEVELOPMENT.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PYPI_PUBLISH.md  README.md  RELEASE_NOTES.md  RELEASE_READY.md  ROADMAP_V0.2.0_QUICKREF.md  SECURITY.md  SECURITY_AUDIT.md  WHATS_NEXT.md  pyproject.toml  renovate.json  run_tests.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  publish.yml  tests.yml
django_iyzico/: __init__.py  admin.py  apps.py  celeryconfig.py  client.py  currency.py  exceptions.py  installment_client.py  installment_urls.py  installment_utils.py  installment_views.py  models.py  monitoring.py  serializers.py  settings.py  signals.py  subscription_manager.py  subscription_models.py  tasks.py  urls.py  utils.py  views.py  viewsets.py
django_iyzico/management/: __init__.py
django_iyzico/management/commands/: __init__.py  cleanup_old_payments.py  sync_iyzico_payments.py
django_iyzico/migrations/: 0001_add_subscription_models.py  0002_add_installment_fields.py  0002_add_payment_method_model.py  0003_add_payment_method_model.py  0003_rename_iyzico_pm_user_act_idx_iyzico_paym_user_id_91d79d_idx_and_more.py
docs/: BRD.md  CURRENCY_GUIDE.md  DEVELOPMENT_ROADMAP.md  FRD.md  INSTALLMENT_GUIDE.md  PERFORMANCE_TESTING.md  PYPI_PUBLISH.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.2.0.md  RELEASE_READY.md  SUBSCRIPTION_GUIDE.md  SYSTEM_DESIGN.md  V0.2.0_IMPLEMENTATION_PLAN.md  WHATS_NEXT.md
example/: .env.example  3DS_AND_WEBHOOK_FLOW.md  README.md  requirements.txt
example/ecommerce_site/: __init__.py  celery.py  settings.py  urls.py  wsgi.py
example/shop/: __init__.py  admin.py  api_urls.py  api_views.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py  views_3ds.py
example/shop/migrations/: __init__.py
example/templates/: home.html
examples/: advanced_usage.py  installment_examples.py  subscription_examples.py
tests/: __init__.py  conftest.py  models.py  settings.py  test_admin.py  test_client.py  test_commands.py  test_critical_paths.py  test_currency.py  test_currency_models.py  test_drf.py  test_installment_client.py  test_installment_models.py  test_installment_utils.py  test_installment_views.py  test_models.py  test_monitoring.py  test_new_utilities.py  test_refunds.py  test_settings.py  test_signals.py  test_subscription_admin.py  test_subscription_manager.py  test_subscription_models.py  test_subscription_tasks.py  test_utils.py  test_views.py  urls.py
tests/performance/: locustfile.py
