[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-iyzico"
version = "0.1.0b1"
description = "Django-native integration for Iyzico payment gateway - Turkey's leading payment solution with PCI DSS compliance"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Emre Aladag", email = "aladagemre@gmail.com"}
]
maintainers = [
    {name = "Emre Aladag", email = "aladagemre@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Point-Of-Sale",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = [
    "django",
    "iyzico",
    "payment",
    "gateway",
    "turkey",
    "ecommerce",
    "payment-gateway",
    "payment-processing",
    "3d-secure",
    "pci-dss",
    "refunds",
    "webhooks",
    "turkish-lira",
    "online-payments",
]
requires-python = ">=3.8"
dependencies = [
    "Django>=3.2",
    "iyzipay>=1.0.45",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=5.0",
    "mypy>=1.0",
    "django-stubs>=4.0",
]
drf = [
    "djangorestframework>=3.12",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Homepage = "https://github.com/aladagemre/django-iyzico"
Documentation = "https://github.com/aladagemre/django-iyzico#readme"
Repository = "https://github.com/aladagemre/django-iyzico"
"Issue Tracker" = "https://github.com/aladagemre/django-iyzico/issues"
"Changelog" = "https://github.com/aladagemre/django-iyzico/blob/main/CHANGELOG.md"
"Source Code" = "https://github.com/aladagemre/django-iyzico"

[tool.setuptools]
packages = ["django_iyzico", "django_iyzico.management", "django_iyzico.management.commands"]

[tool.setuptools.package-data]
django_iyzico = ["py.typed"]

[tool.setuptools.exclude-package-data]
"*" = ["tests", "tests.*", "*.pyc", "__pycache__"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]
addopts = "--cov=django_iyzico --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = "iyzipay.*"
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.coverage.run]
source = ["django_iyzico"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
